--- a/src/exammanagementsystem/StudentListForm.form
+++ b/src/exammanagementsystem/StudentListForm.form
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Student List"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -23,15 +25,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" alignment="0" pref="811" max="32767" attributes="0"/>
+          <Component id="jScrollPane1" alignment="0" pref="820" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="0" pref="25" max="32767" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="275" max="-2" attributes="0"/>
-          </Group>
+          <Component id="jScrollPane1" min="-2" pref="275" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -47,16 +46,16 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="10" rowCount="0">
-                <Column editable="true" title="student_id" type="java.lang.Object"/>
-                <Column editable="true" title="first_name" type="java.lang.Object"/>
-                <Column editable="true" title="last_name" type="java.lang.Object"/>
-                <Column editable="true" title="roll no" type="java.lang.Object"/>
-                <Column editable="true" title="contact_no" type="java.lang.Object"/>
-                <Column editable="true" title="gender" type="java.lang.Object"/>
-                <Column editable="true" title="email_id" type="java.lang.Object"/>
-                <Column editable="true" title="dob" type="java.lang.Object"/>
-                <Column editable="true" title="student_username" type="java.lang.Object"/>
-                <Column editable="true" title="student_password" type="java.lang.Object"/>
+                <Column editable="false" title="student_id" type="java.lang.Object"/>
+                <Column editable="false" title="first_name" type="java.lang.Object"/>
+                <Column editable="false" title="last_name" type="java.lang.Object"/>
+                <Column editable="false" title="roll no" type="java.lang.Object"/>
+                <Column editable="false" title="contact_no" type="java.lang.Object"/>
+                <Column editable="false" title="gender" type="java.lang.Object"/>
+                <Column editable="false" title="email_id" type="java.lang.Object"/>
+                <Column editable="false" title="dob" type="java.lang.Object"/>
+                <Column editable="false" title="student_username" type="java.lang.Object"/>
+                <Column editable="false" title="student_password" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
